[gd_scene load_steps=5 format=3 uid="uid://c3ag6fdq120t7"]

[ext_resource type="LabelSettings" uid="uid://b42pkjt5y4qnf" path="res://addons/modelization_checking/h2_label_settings.tres" id="1_hhm4w"]
[ext_resource type="Script" path="res://addons/modelization_checking/reveal_button.gd" id="2_rn0gi"]
[ext_resource type="Script" path="res://addons/modelization_checking/Row.gd" id="2_ruqty"]
[ext_resource type="Texture2D" uid="uid://7g68lf5ivmpl" path="res://icon.svg" id="2_troa5"]

[node name="GridCellLabel" type="Label"]
z_index = 1
offset_right = 1.0
offset_bottom = 23.0
text = "GridCellLabel"
label_settings = ExtResource("1_hhm4w")
script = ExtResource("2_ruqty")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.00002
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.201527, 0.201527, 0.201527, 1)
script = ExtResource("2_rn0gi")

[node name="ButtonUp" type="Button" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_right = 116.0
offset_bottom = 136.0
grow_horizontal = 0
scale = Vector2(0.113811, 0.113811)
icon = ExtResource("2_troa5")

[node name="ButtonDown" type="Button" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -16.0
offset_right = 116.0
offset_bottom = 120.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.113811, 0.113811)
icon = ExtResource("2_troa5")

[connection signal="mouse_entered" from="ColorRect" to="ColorRect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="ColorRect" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect/ButtonUp" to="ColorRect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/ButtonUp" to="ColorRect" method="_on_mouse_exited"]
[connection signal="pressed" from="ColorRect/ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="mouse_entered" from="ColorRect/ButtonDown" to="ColorRect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/ButtonDown" to="ColorRect" method="_on_mouse_exited"]
[connection signal="pressed" from="ColorRect/ButtonDown" to="." method="_on_button_down_pressed"]
